# machinelearning2021

exercises/03/: main.ipynb  pyproject.toml  result_table.html  results.csv  run.py  visualize.py
exercises/03/datasets/: kc1.csv
exercises/03/runs/: dataset_000001-model_000001.ipynb  dataset_000001-model_000002.ipynb  dataset_000001-model_000003.ipynb  dataset_000001-model_000004.ipynb  dataset_000001-model_000005.ipynb  dataset_000001-model_000006.ipynb  dataset_000001-model_000007.ipynb  dataset_000001-model_000008.ipynb  dataset_000002-model_000001.ipynb  dataset_000002-model_000002.ipynb  dataset_000002-model_000003.ipynb  dataset_000002-model_000004.ipynb  dataset_000003-model_000001.ipynb  dataset_000003-model_000002.ipynb  dataset_000003-model_000003.ipynb  dataset_000003-model_000004.ipynb  dataset_000004-model_000001.ipynb  dataset_000004-model_000002.ipynb  dataset_000004-model_000003.ipynb  dataset_000004-model_000004.ipynb  dataset_000005-model_000001.ipynb  dataset_000005-model_000002.ipynb  dataset_000005-model_000003.ipynb  dataset_000005-model_000004.ipynb  dataset_000006-model_000001.ipynb  dataset_000006-model_000002.ipynb  dataset_000006-model_000003.ipynb  dataset_000006-model_000004.ipynb  dataset_000007-model_000001.ipynb  dataset_000007-model_000002.ipynb  dataset_000007-model_000003.ipynb  dataset_000007-model_000004.ipynb  dataset_000008-model_000001.ipynb  dataset_000008-model_000002.ipynb  dataset_000008-model_000003.ipynb  dataset_000008-model_000004.ipynb  dataset_000009-model_000001.ipynb  dataset_000009-model_000002.ipynb  (+607 more)
(+175 files in other folders)
