[tool.poetry]
name = "Exercise3"
version = "0.1.0"
description = "Exercise #03 from Machine Learning in CIn-UFPE"
authors = ["Giulio Carvalho <gcc@cin.ufpe.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1"
scikit-learn = "0.24.1"
pandas = "1.2.3"
jupyter = "1.0.0"
pandas-profiling = "2.11.0"
papermill = "2.3.3"
tqdm = "4.59.0"

[tool.poetry.dev-dependencies]
ipdb = "0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
